# smartdec

./: .clang-format  .gitignore  .gitignore.orig  .ycm_extra_conf.py  Doxyfile  Makefile  README  README.asciidoc  dark.qss
src/: CMakeLists.txt
src/demangler/: CMakeLists.txt  main.cpp
src/ida-plugin/: CMakeLists.txt  DecompilerPlugin.cpp  DecompilerPlugin.h  IdaByteSource.cpp  IdaByteSource.h  IdaDemangler.cpp  IdaDemangler.h  IdaFrontend.cpp  IdaFrontend.h  IdaPlugin.cpp  IdaPlugin.h  IdaWorkaroundEnd.h  IdaWorkaroundStart.h  NavigationHelper.cpp  NavigationHelper.h  SmartDecPlugin.cpp  SmartDecPlugin.h
src/nc/: CMakeLists.txt  config.h.in
src/nc/arch/: CMakeLists.txt
src/nc/arch/arm/: ArmArchitecture.cpp  ArmArchitecture.h  ArmDisassembler.cpp  ArmDisassembler.h  ArmInstruction.cpp  ArmInstruction.h  ArmInstructionAnalyzer.cpp  ArmInstructionAnalyzer.h  ArmRegisterTable.i  ArmRegisters.cpp  ArmRegisters.h  CMakeLists.txt  CallingConventions.cpp  CallingConventions.h  CapstoneDisassembler.h
src/nc/arch/intel/: CMakeLists.txt  CallingConventions.cpp  CallingConventions.h  IntelArchitecture.cpp  IntelArchitecture.h  IntelDataflowAnalyzer.cpp  IntelDataflowAnalyzer.h  IntelInstruction.cpp  IntelInstruction.h  IntelInstructionAnalyzer.cpp  IntelInstructionAnalyzer.h  IntelInstructionDisassembler.cpp  IntelInstructionDisassembler.h  IntelInstructionTable.i  IntelMasterAnalyzer.cpp  IntelMasterAnalyzer.h  IntelMnemonics.cpp  IntelMnemonics.h  IntelOperandCache.cpp  IntelOperandCache.h  IntelOperands.cpp  IntelOperands.h  IntelRegisters.cpp  IntelRegisters.h  IntelUniversalAnalyzer.cpp  IntelUniversalAnalyzer.h  PrefixTable.i  Prefixes.cpp  Prefixes.h  udis86.h
src/nc/arch/x86/: CMakeLists.txt  CallingConventions.cpp  CallingConventions.h  X86Architecture.cpp  X86Architecture.h  X86DataflowAnalyzer.cpp  X86DataflowAnalyzer.h  X86Disassembler.cpp  X86Disassembler.h  X86Instruction.cpp  X86Instruction.h  X86InstructionAnalyzer.cpp  X86InstructionAnalyzer.h  X86InstructionDisassembler.cpp  X86InstructionDisassembler.h  X86MasterAnalyzer.cpp  X86MasterAnalyzer.h  X86RegisterTable.i  X86Registers.cpp  X86Registers.h  udis86.h
src/nc/common/: BitTwiddling.h  Branding.cpp  Branding.cpp.in  Branding.h  ByteOrder.h  CMakeLists.txt  CancellationToken.cpp  CancellationToken.h  CheckedCast.h  Conversions.cpp  Conversions.h  DisjointSet.h  Escaping.cpp  Escaping.h  Exception.cpp  Exception.h  Foreach.h  GitRevision.cpp.in  GitRevision.h  GitSHA1.cpp.in  GitSHA1.h  Kinds.h  LogLevel.h  LogToken.h  Logger.cpp  Logger.h  Memoization.h  PrintCallback.h  Printable.h  QtRange.h  Range.h  RangeClass.h  SignalLogger.cpp  SignalLogger.h  SizedValue.h  StreamLogger.cpp  StreamLogger.h  StringToInt.cpp  StringToInt.h  Subclass.h  (+10 more)
src/nc/core/: CMakeLists.txt  Context.cpp  Context.h  Driver.cpp  Driver.h  MasterAnalyzer.cpp  MasterAnalyzer.h  Module.cpp  Module.h  UniversalAnalyzer.cpp  UniversalAnalyzer.h
src/nc/core/arch/: Architecture.cpp  Architecture.h  ArchitectureRepository.cpp  ArchitectureRepository.h  ByteOrder.h  Capstone.h  CapstoneInstruction.h  Disassembler.cpp  Disassembler.h  Instruction.cpp  Instruction.h  Instructions.cpp  Instructions.h  Mnemonic.h  Mnemonics.h  Mnemonics.i  MnemonicsConstructor.i  Operand.h  OperandCache.cpp  OperandCache.h  Operands.cpp  Operands.h  Register.h  Registers.h  Registers.i  RegistersConstructor.i
src/nc/core/image/: BufferByteSource.cpp  BufferByteSource.h  ByteSource.h  Image.cpp  Image.h  Platform.cpp  Platform.h  Reader.cpp  Reader.h  Relocation.h  Relocations.cpp  Relocations.h  Section.cpp  Section.h  Sections.cpp  Sections.h  Symbol.cpp  Symbol.h  Symbols.cpp  Symbols.h  ZeroByteSource.cpp  ZeroByteSource.h
src/nc/core/input/: ParseError.cpp  ParseError.h  Parser.cpp  Parser.h  ParserRepository.cpp  ParserRepository.h  Utils.h
src/nc/core/ir/: BasicBlock.cpp  BasicBlock.h  CFG.cpp  CFG.h  CommentText.cpp  CommentText.h  Dominators.cpp  Dominators.h  Function.cpp  Function.h  Functions.cpp  Functions.h  FunctionsGenerator.cpp  FunctionsGenerator.h  Inlining.cpp  Inlining.h  Jump.cpp  Jump.h  JumpTarget.cpp  JumpTarget.h  MemoryDomain.h  MemoryLocation.cpp  MemoryLocation.h  Program.cpp  Program.h  Statement.cpp  Statement.h  Statements.cpp  Statements.h  Term.cpp  Term.h  Terms.cpp  Terms.h
src/nc/core/irgen/: Expressions.h  IRGenerator.cpp  IRGenerator.h  InstructionAnalyzer.cpp  InstructionAnalyzer.h  InvalidInstructionException.cpp  InvalidInstructionException.h
src/nc/core/likec/: ArgumentDeclaration.cpp  ArgumentDeclaration.h  BinaryOperator.cpp  BinaryOperator.h  Block.cpp  Block.h  Break.cpp  Break.h  CallOperator.cpp  CallOperator.h  CaseLabel.cpp  CaseLabel.h  CommentStatement.cpp  CommentStatement.h  Commentable.cpp  Commentable.h  CompilationUnit.cpp  CompilationUnit.h  Continue.cpp  Continue.h  Declaration.h  DefaultLabel.cpp  DefaultLabel.h  DoWhile.cpp  DoWhile.h  Expression.h  ExpressionStatement.cpp  ExpressionStatement.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionIdentifier.cpp  FunctionIdentifier.h  FunctionPointerType.cpp  FunctionPointerType.h  (+60 more)
src/nc/gui/: Activity.cpp  Activity.h  CMakeLists.txt  Colors.h  Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h  CppSyntaxHighlighter.cpp  CppSyntaxHighlighter.h  CxxDocument.cpp  CxxDocument.h  CxxView.cpp  CxxView.h  Decompilation.cpp  Decompilation.h  Decompile.cpp  Decompile.h  DecompileAll.cpp  DecompileAll.h  DeleteInstructions.cpp  DeleteInstructions.h  Disassemble.cpp  Disassemble.h  Disassembly.cpp  Disassembly.h  DisassemblyDialog.cpp  DisassemblyDialog.h  GotoLineWidget.cpp  GotoLineWidget.h  InspectorItem.cpp  InspectorItem.h  InspectorModel.cpp  InspectorModel.h  InspectorView.cpp  InspectorView.h  InstructionsModel.cpp  InstructionsModel.h  InstructionsView.cpp  InstructionsView.h  (+36 more)
src/nc/input/: CMakeLists.txt
src/nocode/: CMakeLists.txt  main.cpp
src/smartdec/: CMakeLists.txt  main.cpp
src/snowman/: CMakeLists.txt  main.cpp
src/test-scripts/: megatest.py  test-decompiler.py
(+340 files in other folders)
